Created an internal page that we and botanists can look at to see the characters that are being chosen as the "best" filters in each pile. The results so far are not encouraging, but, that shows why it was important to have this visualization!
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@372 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/core/templates/index.html
+++ b/gobotany/core/templates/index.html
@@ -9,7 +9,10 @@
       <li><a href="canonical-images">Image Search</a></li>
       <li><a href="species-lists/">List species
           in a pile group, pile, or genus (through a REST call)</a></li>
-      <li><a href="characters/">Characters rankings in each pile</a></li>
+      <li><a href="best-characters/">
+          Best characters in each pile, ranked by
+          entropy, coverage, and observability
+      </a></li>
       <li><a href="simple/">Simple Key app</a></li>
       <li id="tests-action">Run Tests (please run in dojo debug mode, see the buildout README.txt for more details)</li>
     </ul>
