Added the famous Django Trailing Slash to a URL.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@373 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/core/templates/pile_characters_select.html
+++ b/gobotany/core/templates/pile_characters_select.html
@@ -4,7 +4,7 @@
   <ul>
     {% for pile_slug, pile_name in piles %}
     <li>
-      <a href="{{ pile_slug }}">{{ pile_name }}</a>
+      <a href="{{ pile_slug }}/">{{ pile_name }}</a>
     </li>
     {% endfor %}
   </ul>
