Added a species count for each character value in the best-values view.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@374 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/core/templates/pile_characters.html
+++ b/gobotany/core/templates/pile_characters.html
@@ -21,6 +21,7 @@
 
     body p, .fullbar {
       margin: 9px 6px;
+      font-family: Helvetica, “Helvetica Neue”, Arial, sans-serif;
     }
     .fullbar {
       font-size: 0.7em;
@@ -52,7 +53,7 @@
       {% for value in character.values %}
       <div class="valuebar"
            style="width: {{ value.width }}px; max-width: {{ value.width }}px; margin-left: {{ value.leading }}px;"
-           >&nbsp;</div>&nbsp;{{ value.value }}<br>
+           >&nbsp;</div>&nbsp;{{ value.value|safe }}<br>
       {% endfor %}
     </div>
   </p>
