Added one or two more pieces of data to the characters entropy page.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@378 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/core/templates/pile_characters.html
+++ b/gobotany/core/templates/pile_characters.html
@@ -74,7 +74,10 @@
 
   {% for character in characters %}
   <p>
-    {{ character.name }} ({{ character.type }})
+    {{ character.name }}
+    ({{ character.type }})
+    (entropy={{ character.entropy|floatformat }})
+    (ease-of-observability={{ character.ease_of_observability|floatformat }})
     <table class="hbars">
 
       {% for value_str, species_count, row in character.metarows %}
