--- a/gobotany/core/templates/pile_characters.html
+++ b/gobotany/core/templates/pile_characters.html
@@ -42,21 +42,22 @@
     .hbars .na .yes { background-color: #dd7; color: #880; }
     .hbars .novalue .yes { background-color: #f88; color: #800; }
     .hbars .species span {
-       position: relative;
+      position: relative;
     }
     .hbars .species a {
-       visibility: hidden;
-       position: absolute;
-       top: 1.0em;
-       left: -0.1em;
-       background-color: #ffa;
-       padding: 6px;
+      visibility: hidden;
+      position: absolute;
+      top: 1.0em;
+      left: -0.1em;
+      background-color: #ffa;
+      padding: 6px;
+      font-style: italic;
     }
     .hbars .species:hover {
-       background-color: #ff0;
+      background-color: #ff0;
     }
     .hbars .species:hover a {
-       visibility: visible;
+      visibility: visible;
     }
 
   </style>
@@ -76,8 +77,10 @@
   <p>
     {{ character.name }}
     ({{ character.type }})
-    (entropy={{ character.entropy|floatformat }})
-    (ease-of-observability={{ character.ease_of_observability|floatformat }})
+    entropy={{ character.entropy|floatformat:2 }},
+    coverage={{ character.coverage|floatformat:2 }},
+    ease-of-observability={{ character.ease_of_observability }},
+    score={{ character.score|floatformat:2 }}
     <table class="hbars">
 
       {% for value_str, species_count, row in character.metarows %}
