Added subway-map breadcrumbs to the bottom of the pilegroup and pile pages.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@381 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/base.html
+++ b/gobotany/simplekey/templates/simplekey/base.html
@@ -20,7 +20,11 @@
            Learning Opportunities</p>
       </div>
       {% block content %}{% endblock %}
-      {% include "simplekey/footer.html" %}
+      <div id="foot">
+        {% block footer %}
+          (footer/navigation)
+        {% endblock %}
+      </div>
     </div>
     <script type="text/javascript">
     djConfig = { 
