--- a/gobotany/simplekey/templates/simplekey/pilegroup.html
+++ b/gobotany/simplekey/templates/simplekey/pilegroup.html
@@ -2,15 +2,15 @@
 {% block content %}
   <div class="PilePage" id="pile-finder">
     <h1>The pilegroup: {{ pilegroup.name }}</h1>
-    
+
     <h2>Key Characteristics</h2>
     {{ pilegroup.key_characteristics|safe }}
-    
+
     <h2>Notable Exceptions</h2>
     {{ pilegroup.notable_exceptions|safe }}
-    
+
     <hr>
-    
+
     <p>
       Which of the following best describes your plant?
     </p>
@@ -27,6 +27,9 @@
     {% endfor %}
 
   </div>
+{% endblock %}
+{% block footer %}
+  {% include "simplekey/footcrumbs.html" %}
 {% endblock %}
 {% block js_bottom %}
 
