Added a line to the best-character view stating how long the entropy call took.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@384 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/core/templates/pile_characters.html
+++ b/gobotany/core/templates/pile_characters.html
@@ -72,6 +72,9 @@
   <h1>Characters for pile {{ pile.name }}, from best to worse</h1>
 
   <p>
+    Entropy calculation took {{ elapsed_time|floatformat:2 }} seconds.
+  </p>
+  <p>
     The best characters have the lowest “score”,
     which is built through a secret formula that combines:
   </p>
