--- a/gobotany/core/templates/pile_characters.html
+++ b/gobotany/core/templates/pile_characters.html
@@ -34,6 +34,9 @@
       margin: 0.5em 0.5em 1em 3em;
       font-size: 0.84em;
     }
+    .hbars td {
+      white-space: nowrap;
+    }
     .hbars .yes, .hbars .no, .hbars .warning, .hbars .species {
       border: 1px solid white;
       height: 1em;
