--- a/gobotany/static/gobotany.css
+++ b/gobotany/static/gobotany.css
@@ -176,8 +176,26 @@ ul#plant-listing {
 
 #plant-listing .PlantScrollPage li {
     float: left;
-    margin: 0 10px 10px 0;
+    padding: 6px 3px;
+    border-left: 5px solid #fff;
+    margin: 0 0 10px 0;
     min-height: 150px;
+}
+#plant-listing .PlantScrollPage li.genus0 { background-color: #d9d9d9; }
+#plant-listing .PlantScrollPage li.genus0 + li.genus0 {
+    border-left-color: #d9d9d9;
+}
+#plant-listing .PlantScrollPage li.genus1 { background-color: #d5ecc5; }
+#plant-listing .PlantScrollPage li.genus1 + li.genus1 {
+    border-left-color: #d5ecc5;
+}
+#plant-listing .PlantScrollPage li.genus2 { background-color: #aa98aa; }
+#plant-listing .PlantScrollPage li.genus2 + li.genus2 {
+    border-left-color: #aa98aa;
+}
+#plant-listing .PlantScrollPage li.genus3 { background-color: #c5e8ff; }
+#plant-listing .PlantScrollPage li.genus3 + li.genus3 {
+    border-left-color: #c5e8ff;
 }
 
 #plant-listing li.PlantScollPage {
@@ -192,11 +210,10 @@ ul#plant-listing {
     width: 110px;
     text-align: center;
     vertical-align: middle;
-    border: 1px #fff solid;
 }
 
 #plant-listing li a:hover {
-    border: 1px #ddd dashed;
+    ;
 }
 
 #plant-listing .MissingImage {
