Now updates measurements with imperial units as well
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@393 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/static/gobotany.css
+++ b/gobotany/static/gobotany.css
@@ -518,3 +518,11 @@ by javascript, see gobotany.sk.results.notify() */
     border-bottom-right-radius: 15px;
     padding: 0.25em 0.75em;
 }
+
+input.filter_int {
+    width: 5em;
+}
+
+input.filter_int2 {
+    width: 5em;
+}
