Added sample species images to both pilegroup panels and pile popups.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@398 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/pile_tooltip.html
+++ b/gobotany/simplekey/templates/simplekey/pile_tooltip.html
@@ -1,3 +1,9 @@
+        <div class="species_image_ribbon">
+          {% for image in pile.sample_species_images.all %}
+            <img src="{{ image.image.thumbnail.absolute_url }}">
+          {% endfor %}
+        </div>
+
         {% if pile.friendly_name %}
         <h3 class="PileFriendlyName">{{ pile.friendly_name }}</h3>
         {% endif %}
