Moved piles.js into a demo submodule
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@402 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/core/templates/pile_search.html
+++ b/gobotany/core/templates/pile_search.html
@@ -1,9 +1,9 @@
 {% extends "base.html" %}
 {% block js %}
 <script type="text/javascript">
-dojo.require('gobotany.piles');
+dojo.require('gobotany.demo.piles');
 dojo.addOnLoad(function() {
-    gobotany.piles.init();
+    gobotany.demo.piles.init();
 });
 </script>
 {% endblock %}
