Moved taxon.js into a demo submodule
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@403 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/core/templates/taxon_search.html
+++ b/gobotany/core/templates/taxon_search.html
@@ -1,9 +1,9 @@
 {% extends "base.html" %}
 {% block js %}
 <script type="text/javascript">
-dojo.require('gobotany.taxon');
+dojo.require('gobotany.demo.taxon');
 dojo.addOnLoad(function() {
-    var helper = gobotany.taxon.TaxonHelper();
+    var helper = gobotany.demo.taxon.TaxonHelper();
     helper.init();
 });
 </script>
