Added dojo parsing
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@406 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/core/templates/dojobase.html
+++ b/gobotany/core/templates/dojobase.html
@@ -9,6 +9,7 @@
            modulePaths: {
                gobotany: '/static/gobotany'
            },
+           parseOnLoad: true,
        };
     </script>
     <script src="/dojo/dojo/dojo.js" type="text/javascript"></script>
