Refactored some logic into ResultsHelper and FilterSectionHelper
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@408 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/results.html
+++ b/gobotany/simplekey/templates/simplekey/results.html
@@ -45,7 +45,8 @@
   <script>
     dojo.require('gobotany.sk.results');
     dojo.addOnLoad(function() {
-      gobotany.sk.results.init('{{ pile.slug }}');
+      var helper = gobotany.sk.results.ResultsHelper('{{ pile.slug }}');
+      helper.setup_page()
     });
   </script>
 {% endblock %}
