made filters more distinguishable
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@411 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/static/gobotany.css
+++ b/gobotany/static/gobotany.css
@@ -65,7 +65,12 @@ p {
 }
 
 #filters li {
-    padding: 0.75em 0 0 1em;
+    padding: 0.5em;
+    border-bottom: 1px dashed #ccc;
+}
+
+#filters li:nth-last-child(1) {
+    border-bottom: 0px;
 }
 
 #filters li a {
