Turned Dijit widgets back on; they were not being detected in production mode.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@418 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/core/templates/dojobase.html
+++ b/gobotany/core/templates/dojobase.html
@@ -27,6 +27,7 @@
            modulePaths: {
                gobotany: '/static/gobotany'
            },
+           parseOnLoad: true,
        };
     </script>
     <script src="http://ajax.googleapis.com/ajax/libs/dojo/1.5/dojo/dojo.xd.js" type="text/javascript"></script>
