An ugly tooltip appears when you hover over a species image in a pile preview.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@419 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/pile_tooltip.html
+++ b/gobotany/simplekey/templates/simplekey/pile_tooltip.html
@@ -1,6 +1,12 @@
         <div class="species_image_ribbon">
           {% for image in pile.sample_species_images.all %}
-            <img src="{{ image.image.thumbnail.absolute_url }}">
+            <img id="ribbon-{{ pile.slug }}-{{ forloop.counter }}"
+                 src="{{ image.image.thumbnail.absolute_url }}">
+            <div dojoType="dijit.Tooltip"
+                 connectId="ribbon-{{ pile.slug }}-{{ forloop.counter }}"
+                 position="below">
+              {% include "simplekey/plant_preview.html" %}
+            </div>
           {% endfor %}
         </div>
 
