--- a/gobotany/simplekey/templates/simplekey/results.html
+++ b/gobotany/simplekey/templates/simplekey/results.html
@@ -36,7 +36,10 @@
     {% include "simplekey/plants.html" %}
   </div>
   {% include "simplekey/filters.html" %}
-  {% include "simplekey/plant_preview.html" %}
+  <div id="plant-preview" dojoType="dijit.Dialog" title="Plant Preview"
+       aria-describedby="preview-intro">
+    {% include "simplekey/plant_preview.html" %}
+  </div>
 {% endblock %}
 {% block footer %}
   {% include "simplekey/footcrumbs.html" %}
