Made the images in the image-ribbon clickable, bringing up a tooltip box.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@421 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/pile_tooltip.html
+++ b/gobotany/simplekey/templates/simplekey/pile_tooltip.html
@@ -1,11 +1,14 @@
         <div class="species_image_ribbon">
           {% for image in pile.sample_species_images.all %}
-            <img id="ribbon-{{ pile.slug }}-{{ forloop.counter }}"
-                 src="{{ image.image.thumbnail.absolute_url }}">
-            <div dojoType="dijit.Tooltip"
-                 connectId="ribbon-{{ pile.slug }}-{{ forloop.counter }}"
-                 position="below">
-              {% include "simplekey/plant_preview.html" %}
+            <div dojoType="dijit.form.DropDownButton">
+              <a>
+                <img id="ribbon-{{ pile.slug }}-{{ forloop.counter }}"
+                     src="{{ image.image.thumbnail.absolute_url }}">
+              </a>
+              <div dojoType="dijit.TooltipDialog"
+                   style="display:none">
+                {% include "simplekey/plant_preview.html" %}
+              </div>
             </div>
           {% endfor %}
         </div>
