Got the species image ribbon working on both the pilegroup-selection pages and the pilegroup pages themselves, without breaking the species popups on the results page.  Required a bit of refactoring and much wresting with the DOM.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@424 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/pile_tooltip.html
+++ b/gobotany/simplekey/templates/simplekey/pile_tooltip.html
@@ -1,11 +1,15 @@
-        <div class="species_image_ribbon">
+<div class="species_image_ribbon">
           {% for image in pile.sample_species_images.all %}
-            <div dojoType="dijit.form.DropDownButton">
-              <a>
-                <img id="ribbon-{{ pile.slug }}-{{ forloop.counter }}"
-                     src="{{ image.image.thumbnail.absolute_url }}">
-              </a>
+            <div class="species_dropdown" dojoType="dijit.form.DropDownButton">
+              <span>
+                <img
+                   id="ribbon-{{ pile.slug }}-{{ forloop.counter }}"
+                   src="{{ image.image.thumbnail.absolute_url }}"
+                   scientific_name="{{ image.content_object.scientific_name}}"
+                   >
+              </span>
               <div dojoType="dijit.TooltipDialog"
+                   class="potential-plant-preview"
                    style="display:none">
                 {% include "simplekey/plant_preview.html" %}
               </div>
