--- a/gobotany/core/templates/pile_characters.html
+++ b/gobotany/core/templates/pile_characters.html
@@ -71,6 +71,9 @@
     .hgrid .species:hover a {
       visibility: visible;
     }
+    .bgraph {
+      font-size: 0.84em;
+    }
     .bgraph .brule {
       border: 1px solid black;
       width: 498px;
@@ -84,7 +87,6 @@
     }
     .bgraph .species {
       margin-left: 1em;
-      font-size: 0.88em;
       font-style: italic;
     }
   </style>
