Taught the glossary page to highlight glossary terms inside of other terms.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@433 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/glossary.html
+++ b/gobotany/simplekey/templates/simplekey/glossary.html
@@ -17,7 +17,7 @@
   {% for term in glossary %}
     <li>
       <b>{{ term.term|title }}.</b>
-      {{ term.lay_definition }}
+      <span class="definition">{{ term.lay_definition }}</span>
       {% if term.image %}
         <img src="{{ term.image.url }}" alt="{{ term.term }}">
       {% endif %}
@@ -25,4 +25,10 @@
   {% endfor %}
 </ul>
 
+{% endblock %}
+
+{% block js_bottom %}
+<script>
+dojo.require('gobotany.sk.glossary');
+</script>
 {% endblock %}
