More general refactoring
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@436 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/results.html
+++ b/gobotany/simplekey/templates/simplekey/results.html
@@ -49,7 +49,7 @@
     dojo.require('gobotany.sk.results');
     dojo.addOnLoad(function() {
       var helper = gobotany.sk.results.ResultsHelper('{{ pile.slug }}');
-      helper.setup_page()
+      helper.setup()
     });
   </script>
 {% endblock %}
